@@ -1,8 +1,10 @@
 -- Version 2.6.0.RC2, released 28-4-2019
 
  * Implement proper rotation and mirroring for Minecraft 1.13 blocks in Custom Objects
+ * Support tile entities (chests, etc.) from Structures (.nbt files)
  * Make support for .schem files more robust
  * Load the icons for the plants in the Custom Plants layer from the Minecraft 1.13 (or later) jar (and not older jars any more)
+ * Bug fix: when duplicating a Custom Object layer, also duplicate the list of objects
 
 -- Version 2.6.0.RC1, released 22-4-2019
 
